--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,13 @@
 {
     "pipeline": {
+      "build": {
+        "outputs": ["dist/**", ".svelte-kit/**"]
+      },
       "dev": {
         "cache": false
       },
-      "build": {
-        "outputs": ["dist/**", ".svelte-kit/**"]
+      "emulate": {
+        "cache": false
       }
     }
   }
