--- a/apps/firebase/functions/package.json
+++ b/apps/firebase/functions/package.json
@@ -4,7 +4,7 @@
   "description": "Cloud Functions for CodingCat.dev",
   "scripts": {
     "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start --only firestore,functions,pubsub",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -15,14 +15,18 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "@google-cloud/pubsub": "^3.2.1",
+    "firebase-admin": "^11.3.0",
+    "firebase-functions": "^4.1.1",
+    "octokit": "^2.0.10",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
-    "@firebase/app-types": "0.x",
+    "@firebase/app-types": "~0.9.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^3.0.0",
+    "jest": "^29.3.1"
   },
   "private": true
 }
