--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
     "scripts": {
         "dev": "turbo run dev",
-		"build": "turbo run build"
+		"build": "turbo run build",
+		"serve": "turbo run serve"
     }
 }
