--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"firebase-admin": "^11.3.0",
 		"prism-svelte": "^0.5.0",
-		"prismjs": "^1.29.0"
+		"prismjs": "^1.29.0",
+		"theme-change": "^2.2.0"
 	}
 }
