--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -18,6 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@tailwindcss/typography": "^0.5.8",
 		"autoprefixer": "^10.4.7",
 		"daisyui": "^2.45.0",
 		"eslint": "^8.28.0",
