--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -17,6 +17,7 @@
 		"@firebase/app-types": "0.x",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/typography": "^0.5.8",
 		"autoprefixer": "^10.4.7",
