--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -32,6 +32,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"svelte-meta-tags": "^2.6.4",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
 		"typescript": "^4.9.3",
