--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -47,6 +47,8 @@
 		"prism-svelte": "^0.5.0",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
-		"theme-change": "^2.2.0"
+		"theme-change": "^2.2.0",
+		"video.js": "^7.20.3",
+		"videojs-youtube": "^2.6.1"
 	}
 }
