include videojs plugin update

--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -41,6 +41,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codingcatdev/videojs-codingcatdev-youtube": "^0.0.0",
+		"@codingcatdev/videojs-youtube": "^0.0.0",
 		"firebase": "^9.15.0",
 		"firebase-admin": "^11.3.0",
 		"mdsvex": "^0.10.6",
