--- a/apps/videojs-youtube/package.json
+++ b/apps/videojs-youtube/package.json
@@ -89,9 +89,11 @@
     "@videojs/generator-helpers": "~2.0.2",
     "jsdoc": "~3.6.6",
     "karma": "^6.3.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.2.13",
     "postcss-cli": "^8.3.1",
     "rollup": "^2.46.0",
+    "shx": "^0.3.4",
     "sinon": "^9.1.0",
     "videojs-generate-karma-config": "~8.0.0",
     "videojs-generate-postcss-config": "~3.0.0",
