--- a/apps/codingcatdev/package.json
+++ b/apps/codingcatdev/package.json
@@ -43,7 +43,7 @@
 	"dependencies": {
 		"@cloudinary/html": "^1.8.1",
 		"@cloudinary/url-gen": "^1.8.7",
-		"@codingcatdev/videojs-codingcatdev-youtube": "workspace:^0.0.2",
+		"@codingcatdev/videojs-codingcatdev-youtube": "^0.0.2",
 		"firebase": "^9.15.0",
 		"firebase-admin": "^11.3.0",
 		"mdsvex": "^0.10.6",
